<resources>
    <string name="facebook_app_id">379226595949383</string>
    <string name="fb_login_protocol_scheme">fb379226595949383</string>
    <string name="app_name">Computek-Survey</string>
    <string name="route">Route</string>
    <string name="route_slogan">Training Center and Innovation Space</string>
    <string name="title_activity_login">Login</string>
    <string name="user_name">user name</string>
    <string name="password">Password</string>
    <string name="Survey">Survey</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_us">Map</string>
    <string name="title_activity_register">Register</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="submit">submit</string>
    <string name="title_activity_visitor_list">VisitorList</string>
</resources>
