<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="holyquran.cls.com.computek_survey.View.Register"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/Survey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/Survey"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/Survey"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toStartOf="@id/gender"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/gender_icon"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <Spinner
        android:layout_width="0dp"
        android:padding="4dp"
        android:id="@+id/gender"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gender_icon"
        app:layout_constraintTop_toBottomOf="@+id/phone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:background="@drawable/login_button_bg_rounded"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        />

</android.support.constraint.ConstraintLayout>
